# pythia

./: .env.example  .gitignore  .vercelignore  EVAL.md  README.md  STATUS.md  VERIFY-CHECKLIST.md  VERIFY.md  package-lock.json  package.json
.playwright-cli/: page-2026-05-24T12-55-56-919Z.yml  page-2026-05-24T12-57-35-882Z.yml
agent/: pyproject.toml
agent/pythia/: __init__.py  analyst.py  config.py  fixtures.py  loop.py  pm.py  preview.py  publisher.py  scout.py  trace.py
agent/pythia/scripts/: publish_live_feed.py  regen_metrics.py  regen_snapshots.py  regen_specific.py  validate_oracle_eval.py  validate_submission.py
agent/tests/: test_contract_bytecode_check.py  test_oracle_eval.py  test_package_submission.py  test_publish_live_feed.py  test_publisher_payload.py  test_secret_handling.py  test_unlock_button_safety.py  test_validate_submission.py  test_web_rate_limit.py
bot/: pyproject.toml
bot/pythia_bot/: __init__.py  bot.py
contracts/: foundry.toml
docs/: ARC-INTEGRATION.md  POLYMARKET-INTEGRATION.md  USER-FEEDBACK.md  X402-SESSION-KEYS.md
eval/: oracle-redteam.sample.json
scripts/: backfill_event_data_sources.py  check_contract_bytecode.py  cli-unlock.mjs  package_submission.py  polymarket-builder-smoke.ts  upload-private-blob.mjs
traces/: sanitized-full-trace.example.json  trace-000001.json  trace-000002.json  trace-000003.json  trace-000004.json  trace-000005.json  trace-000006.json  trace-000007.json  trace-000008.json  trace-000009.json  trace-000010.json  trace-000011.json  trace-000012.json  trace-000013.json  trace-000014.json  (+1 more)
(+45 files in other folders)
