[project]
name = "pythia-bot"
version = "0.1.0"
description = "Telegram publisher for Pythia picks + reasoning traces"
requires-python = ">=3.11"
authors = [{ name = "yxshee" }]
license = { text = "MIT" }
dependencies = [
    "python-telegram-bot>=21.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "click>=8.1",
    "structlog>=24.1",
]

[project.scripts]
pythia-bot = "pythia_bot.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pythia_bot"]
